Sample/YHC/YHC.Portal/Views/Error/Limit.cshtml
@{
    Layout = "~/Views/Error/_Layout.cshtml";
}
<!--错误500-->
<div class="error">
	<h1>IP限制</h1>
    <h2>很抱歉！您的IP受到限制无法访问本站....</h2>
    <p>英皇国际提醒您很抱歉！您的IP受到限制无法访问本站给您带来的不便深表歉意</p>
    <span>您的IP: <em id="ipaddress"></em></span>
    <a href="#" title="7x24小时在线客服">7x24小时在线客服</a>
    <div class="error_footer">英皇国际网站属于菲律宾卡格杨(Cagayan)授权和监管 所有版权归英皇国际所有，违者必究。<br />
2004-2015 K9900.COM LIMITED.RCBC Plaza,6819Sen.Gil Puyat corner Ayala Avenue,Mak</div>
</div>
<script type="text/javascript">
// 获取IP
$.getScript("http://pv.sohu.com/cityjson",function(){ var ipaddress=(returnCitySN.cip);$("#ipaddress").html(ipaddress)})
</script>